# docker-registry-server-proxy-rust

./: .gitignore  Cargo.toml  README.md
src/: configuration.rs  main.rs  requests.rs
src/controllers/: base.rs  blobs.rs  manifests.rs  mod.rs  uploads.rs
src/data/: helpers.rs  incomplete_upload.rs  json_registry_error.rs  manifests.rs  mod.rs  upload_in_progress.rs  uploads.rs
src/docker_client/: authentication_strategies.rs  client.rs  client_responses.rs  clients_store.rs  mod.rs  www_authenticate.rs
