[package]
name = "pull_registry_attempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full", "macros"] }
axum = "0.6.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.3.5", features = ["trace"] }
eyre = "0.6.8"

serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.9"