[package]
name = "pull_registry_attempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serveur HTTP
tokio = { version = "1.22.0", features = ["full", "macros"] }
axum = "0.6.1"
tower-http = { version = "0.3.5", features = ["trace"] }
tower = "0.4.13"
regex = "1.7.0"
once_cell = "1.16.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
eyre = "0.6.8"

# Ser-de
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.9"