[package]
name = "docker_storage_proxy_registry"
version = "0.1.0"
edition = "2021"
authors = ["Mathias B. <contact@l4p1n.ch>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP server
tokio = { version = "1.22.0", features = ["full", "macros"] }
tokio-util = { version = "0.7.4", features = ["io"] }
axum = { version = "0.6.1", features = ["macros", "headers"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tower = "0.4.13"
regex = "1.7.0"
once_cell = "1.16.0"
futures-util = "0.3.25"
sha2 = "0.10.6"
base16ct = { version = "0.1.1", features = ["alloc"] }
thiserror = "1.0.37"

# Sending Docker layers
uuid = { version = "1.2.2", features = ["v4"]}

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
eyre = "0.6.8"

# Serde
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.9"

# Make sure that the sha2 package is always compiled with optimizations
# enabled. If compiled in debug, hashing something is VERY slow.
[profile.dev.package.sha2]
opt-level = 3